--- a/index.html
+++ b/index.html
@@ -174,13 +174,76 @@
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
     }
 
+    .gradient-text {
+      font-weight: bold;
+      /* Create a linear gradient for the text */
+      background: linear-gradient(to right, #00f2ff, #f200ff); 
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      /* For non-WebKit browsers (though not all support it yet) */
+      background-clip: text;
+      color: transparent;
+    }
+
     /* Footer */
     footer {
-      text-align: center;
-      padding: 1rem 0;
-      font-size: 0.9rem;
-      border-top: 1px solid #2C2E3A;
-      margin-top: 2rem;
+        background: #2C2E3A;
+        color: #fff;
+        padding: 2rem 0;
+    }
+
+    .footer-top {
+        display: flex; 
+        justify-content: space-between; 
+        align-items: flex-start;  /* Columns align at the top */
+    }
+
+    .footer-column {
+        flex: 1;               /* Each column grows to fill available space */
+        margin: 0 1rem;        /* Horizontal spacing between columns */
+    }
+
+    .footer-column h3 {
+        margin-bottom: 1rem;
+        font-size: 1.2rem;
+    }
+
+    .footer-column ul {
+        list-style: none;
+    }
+
+    .footer-column li {
+        margin-bottom: 0.5rem;
+    }
+
+    .footer-column li a {
+        color: #fff;
+        text-decoration: none;
+    }
+
+    .footer-column li a:hover {
+        color: #0A21C0;
+    }
+
+    /* The note at the very bottom, centered across all columns */
+    .footer-note {
+        text-align: center;
+        margin-top: 2rem;
+        border-top: 1px solid #141619;
+        padding-top: 1rem;
+        font-size: 0.85rem;
+    }
+
+    /* Responsive: stack columns on narrow screens */
+    @media (max-width: 768px) {
+        .footer-top {
+            flex-direction: column;
+            align-items: center;
+            text-align: center; /* Center text within each column */
+        }
+        .footer-column {
+            margin: 1rem 0; /* Vertical spacing between columns */
+        }
     }
 
     /* Responsive Media Queries */
@@ -222,6 +285,7 @@
       .feature-cards {
         grid-template-columns: 1fr;
       }
+      
     }
   </style>
 </head>
@@ -230,10 +294,9 @@
   <!-- Header -->
   <header>
     <div class="container header-content">
-      <div class="logo">InsightEdge</div>
+      <div class="logo">InsightEdge Consulting</div>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">About Us</a></li>
           <li><a href="#">Contact</a></li>
@@ -244,7 +307,7 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <h1>Empowering Small Businesses</h1>
+    <h1 class="gradient-text">Empowering Small Businesses</h1>
     <p>Optimizing your digital presence with cutting-edge tools in analytics, AI, and project management.</p>
     <button class="cta-btn">Get Your Free Consultation</button>
   </section>
@@ -291,7 +354,44 @@
 
   <!-- Footer -->
   <footer>
-    © 2025 InsightEdge Consulting. All Rights Reserved.
+    <div class="container footer-top">
+      <!-- Left Column -->
+      <div class="footer-column" style="text-align: center;">
+        <h3>Contact Us</h3>
+        <ul>
+          <li>Phone: +1 (555) 123-4567</li>
+          <li>Email: info@insightedge.com</li>
+          <li>Location: 123 Future Blvd, Technopolis</li>
+        </ul>
+      </div>
+  
+      <!-- Center Column -->
+      <div class="footer-column" style="text-align: center;">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Tutorials</a></li>
+        </ul>
+      </div>
+  
+      <!-- Right Column -->
+      <div class="footer-column" style="text-align: center;">
+        <h3>Services</h3>
+        <ul>
+          <li>Analytics Optimization</li>
+          <li>AI Implementation</li>
+          <li>Workflow Automation</li>
+          <li>Project Consulting</li>
+        </ul>
+      </div>
+    </div>
+    
+    <!-- Footer Bottom Note -->
+    <div class="footer-note">
+      © 2025 InsightEdge Consulting. All Rights Reserved.
+    </div>
   </footer>
 
 </body>
